# cameracalibration

./: README.md  setup.cfg  tox.ini
src/cameracalibration/: __init__.py  _debug.py  _widget.py  calreadnoise.py  gui_calibration_tool.py  napari.yaml
src/cameracalibration/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
